--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "name": "assiement",
   "version": "1.0.0",
   "main": "server.ts",
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "typescript": "^4.7.4"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
