--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "dependencies": {
-    "express": "^4.18.1"
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.6",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "knex": "^2.2.0",
+    "nodeman": "^1.1.2",
+    "pg": "^8.7.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   },
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf dist && tsc",
+    "dev": "nodemon --watch src -e ts --exec ts-node -r dotenv/config src/server.ts",
+    "start": "node dist/server.js"
   },
   "name": "assiement",
   "version": "1.0.0",
   "main": "server.ts",
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "typescript": "^4.7.4"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
