--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "knex": "^2.2.0",
+    "node-postgres": "^0.6.2",
     "nodeman": "^1.1.2",
-    "pg": "^8.7.3",
+    "postgres-migrations": "^5.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && tsc",
-    "dev": "nodemon --watch src -e ts --exec ts-node -r dotenv/config src/server.ts",
+    "build": "rm -rf dist && ttsc && cp -R ./src/db/migrations ./dist/db",
+    "dev": "NODE_PATH=src nodemon --watch src -e ts --exec ts-node -r dotenv/config src/server.ts",
     "start": "node dist/server.js"
   },
   "name": "assiement",
@@ -22,5 +23,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/pg": "^8.6.5",
+    "ttypescript": "^1.5.13",
+    "typescript-transform-paths": "^3.3.1"
+  }
 }
