--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.0.6",
-    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "knex": "^2.2.0",
     "node-postgres": "^0.6.2",
-    "nodeman": "^1.1.2",
-    "postgres-migrations": "^5.3.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "postgres-migrations": "^5.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,8 +18,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.6",
     "@types/pg": "^8.6.5",
+    "dotenv": "^16.0.1",
+    "nodeman": "^1.1.2",
+    "ts-node": "^10.9.1",
     "ttypescript": "^1.5.13",
+    "typescript": "^4.7.4",
     "typescript-transform-paths": "^3.3.1"
   }
 }
