--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "node-postgres": "^0.6.2",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "postgres-migrations": "^5.3.0"
   },
   "scripts": {
