--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,12 @@
       "es6"
     ],
     "allowJs": true,
-    "strict": true,
+    "strict": false,
     "sourceMap": false,
     "outDir": "./dist",
     "module": "commonjs",
     "skipLibCheck": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
