--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "node-postgres": "^0.6.2",
     "postgres-migrations": "^5.3.0",
     "sequelize": "^6.21.3"
