--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "body-parser": "^1.20.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6",
     "node-postgres": "^0.6.2",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "postgres-migrations": "^5.3.0",
     "sequelize": "^6.21.3"
   },
