--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "node-postgres": "^0.6.2",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
