--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ DB_PORT=5432
 # DB_POOL_CLIENT_IDLE_TIMEOUT=10000
 # DB_POOL_CLIENT_CONNECTION_TIMEOUT=2000
 WAIT_HOSTS=db:5432
+ACCESS_TOKEN_SECRET=passwordsecret
