--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "node-postgres": "^0.6.2",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
