--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
@@ -32,8 +33,8 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
     "@types/pg": "^8.6.5",
-    "dotenv": "^16.0.1",
     "nodeman": "^1.1.2",
+    "sequelize-cli": "^6.4.1",
     "ts-node": "^10.9.1",
     "ttypescript": "^1.5.13",
     "typescript": "^4.7.4",
