--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sequelize": "^6.21.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "rm -rf dist && ttsc && cp -R ./public ./dist/public",
     "dev": "NODE_PATH=src nodemon --watch src -e ts --exec ts-node -r dotenv/config src/server.ts",
     "start": "node dist/server.js"
@@ -33,6 +33,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.6",
     "@types/pg": "^8.6.5",
+    "jest": "^28.1.3",
     "nodeman": "^1.1.2",
     "sequelize-cli": "^6.4.1",
     "ts-node": "^10.9.1",
