--- a/.env
+++ b/.env
@@ -3,8 +3,11 @@ PORT=3000
 DB_HOST=db
 DB_USER=postgres
 DATABASE=postgres
+TEST_DATABASE=postgres-test
 DB_PASSWORD=password
 DB_PORT=5432
+TEST_DB_PORT=5430
+TEST_DB_HOST=localhost
 # DB_POOL_SIZE=2
 # DB_POOL_CLIENT_IDLE_TIMEOUT=10000
 # DB_POOL_CLIENT_CONNECTION_TIMEOUT=2000
