--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/node": "^18.0.6",
     "@types/pg": "^8.6.5",
     "jest": "^28.1.3",
     "nodeman": "^1.1.2",
     "sequelize-cli": "^6.4.1",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "ttypescript": "^1.5.13",
     "typescript": "^4.7.4",
